fixed animations and alignment

--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -147,7 +147,7 @@ margin-bottom: 3rem;
 .lowest-text {
   text-align: center;
   background-color: #f9f9f9;
-  margin-top: 12.5rem;
+  margin-top: 3rem;
 }
 
 .columns {
@@ -162,6 +162,7 @@ margin-bottom: 3rem;
 
 .thank-you {
   margin-bottom: 2rem;
+  margin-top: 2rem;
 }
 
 .grey-background {
@@ -184,7 +185,7 @@ background-color: #f9f9f9;
 }
 
 .warning {
-
+  margin-bottom: 2rem;
 }
 
 .testimonial-text {
@@ -202,4 +203,12 @@ background-color: #f9f9f9;
 
 .panel {
   border-right: 1px dotted black;
+}
+
+.Rhys-story {
+  margin-bottom: 2rem;
+}
+
+.Rhys-skills {
+  margin-bottom: 2rem;
 }
